k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tinclo-ingress
  namespace: tinclo
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "10m"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - api.tinclo.app
        - tinclo.app
      secretName: tinclo-tls
  rules:
    - host: api.tinclo.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinclo-backend-svc
                port:
                  number: 5002
    - host: tinclo.app
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tinclo-frontend-svc
                port:
                  number: 80
